--- a/public/eksuma.html
+++ b/public/eksuma.html
@@ -103,10 +103,16 @@
 		</div>
     </nav>
  <!--NavBar-->
-    <div class="container text-center animated bounceInDown">
-        <h3>Why Become A Member</h3>
-        <p>............</p>
-    </div>
+    <div class="container text-center">
+        <h3 class="animated bounceInDown">Why Become A Member?</h3></div>
+       <ul>
+       <li><strong> <p class="paxmp animated fadeInRight">Access to undiluted religious Knowledge</p></strong></li>
+       <li><strong> <p class="paxmp animated fadeInLeft">Unparallel educational monitiring</p></strong></li>
+       <li><strong> <p class="paxmp animated fadeInRight">Access to seasoned uplptment mentors</p></strong></li>
+       <li><strong> <p class="paxmp animated fadeInLeft">Unequal access to brotherliness spirit</p></strong></li>
+        <li><strong> <p class="paxmp animated fadeInLeft">Unequal access to brotherliness spirit</p></strong></li>
+          <li><strong> <p class="paxmp animated fadeInRight">Welfare packages second to none.</p></strong></li>
+       </ul>
     <div class="alert wow fadeInLeft">
         <h4 class="alert-heading">Welcome Alumni!!!</h4>
         <p>Aww yeah, you successfully registered for the mssn eksu alumni.</p>
