--- a/public/events.html
+++ b/public/events.html
@@ -109,7 +109,7 @@
  <div class="container">
     <h1 class="h1">Mssn Eksu Events 2020</h1>
 <div class="card wow fadeInLeft">
-  <h5 itemprop="name" class="card-title">Ushrah</h5>
+  <h5 itemprop="name" class="card-title">Ushrah Class</h5>
   <table>
     <tr>
       <td width="15%" class="text-blue"><i class="fa fa-calendar"></i></td>
@@ -126,25 +126,25 @@
   </table>
   <div align="right">
       <div class="addeventatc" title="Add to Calendar">
-          <a href="www.snyu.com"><i class="fa fa-calendar" aria-hidden="true"></i>
+          <a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=NDlzcDNzcnM4bDJwMWw1YmsxYmttMm1haG8gbXNhbGF3dTVAbQ&tmsrc=msalawu5@gmail.com" target="_blank"><i class="fa fa-calendar" aria-hidden="true"></i>
             <span>Add to Calendar</span></a>
           </div>  
   </div>
       </div>
   <div class="card wow fadeInRight">
-    <h5 itemprop="name" class="card-title">Talim Session</h5>
+    <h5 itemprop="name" class="card-title">Madrassah</h5>
     <table>
       <tr>
         <td width="15%" class="text-blue"><i class="fa fa-calendar"></i></td>
-        <td itemprop="startDate">Every Sundays</td>
+        <td itemprop="startDate">Weekdays</td>
       </tr>
       <tr itemprop="location" itemscope itemtype="http://schema.org/Place">
         <td class="text-red"><i class="fa fa-map-marker"></i></td>
-        <td itemprop="name">Eng LT4</td>
+        <td itemprop="name">Infront Of Mini Mosque</td>
       </tr>
       <tr>
         <td class="text-green"><i class="fa fa-clock-o"></i></td>
-        <td>	08:00AM - 12:00PM</td>
+        <td>	05:00PM - 06:00PM</td>
       </tr>
     </table>
     <div align="right">
@@ -155,19 +155,19 @@
 </div>
   </div>
   <div class="card wow fadeInLeft">
-    <h5 itemprop="name" class="card-title">Mini IVC</h5>
+    <h5 itemprop="name" class="card-title">Daily Tahlim</h5>
     <table>
       <tr>
         <td width="15%" class="text-blue"><i class="fa fa-calendar"></i></td>
-        <td itemprop="startDate">Every Sundays</td>
+        <td itemprop="startDate">Weekdays</td>
       </tr>
       <tr itemprop="location" itemscope itemtype="http://schema.org/Place">
         <td class="text-red"><i class="fa fa-map-marker"></i></td>
-        <td itemprop="name">Eng LT4</td>
+        <td itemprop="name">Our Various Muslim Hostel</td>
       </tr>
       <tr>
         <td class="text-green"><i class="fa fa-clock-o"></i></td>
-        <td>	08:00AM - 12:00PM</td>
+        <td>	After Magrib Prayer - 8:00PM</td>
       </tr>
     </table>
     <div align="right">
@@ -178,7 +178,7 @@
 </div>
     </div>
     <div class="card wow fadeInRight">
-      <h5 itemprop="name" class="card-title">Talim Session</h5>
+      <h5 itemprop="name" class="card-title">Brothers' Wing & Sisters' Circle</h5>
       <table>
         <tr>
           <td width="15%" class="text-blue"><i class="fa fa-calendar"></i></td>
@@ -201,7 +201,7 @@
 </div>
 </div>
 <div class="card wow fadeInLeft">
-<h5 itemprop="name" class="card-title">Talim Session</h5>
+<h5 itemprop="name" class="card-title">Dawah Weekend</h5>
 <table>
   <tr>
     <td width="15%" class="text-blue"><i class="fa fa-calendar"></i></td>
@@ -224,7 +224,7 @@
 </div>
     </div>
     <div class="card wow fadeInRight">
-      <h5 itemprop="name" class="card-title">Talim Session</h5>
+      <h5 itemprop="name" class="card-title">Jihad Weekend</h5>
       <table>
         <tr>
           <td width="15%" class="text-blue"><i class="fa fa-calendar"></i></td>
@@ -247,7 +247,7 @@
       </div>
           </div>
           <div class="card wow fadeInLeft">
-            <h5 itemprop="name" class="card-title">Talim Session</h5>
+            <h5 itemprop="name" class="card-title">Empowerment Programs</h5>
             <table>
               <tr>
                 <td width="15%" class="text-blue"><i class="fa fa-calendar"></i></td>
@@ -270,7 +270,7 @@
             </div>
                 </div>
         <div class="card wow fadeInRight">
-            <h5 itemprop="name" class="card-title">Talim Session</h5>
+            <h5 itemprop="name" class="card-title">Training Exercice</h5>
         <table>
           <tr>
             <td width="15%" class="text-blue"><i class="fa fa-calendar"></i></td>
@@ -287,7 +287,7 @@
         </table>
         <div align="right">
             <div class="addeventatc" title="Add to Calendar">
-                <a href="www.snyu.com"><i class="fa fa-calendar" aria-hidden="true"></i>
+                <a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=NDlzcDNzcnM4bDJwMWw1YmsxYmttMm1haG8gbXNhbGF3dTVAbQ&tmsrc=msalawu5@gmail.com" target="_blank"><i class="fa fa-calendar" aria-hidden="true"></i>
                   <span>Add to Calendar</span></a>
             </div>
         </div>
