--- a/public/about.html
+++ b/public/about.html
@@ -45,8 +45,8 @@
       <!-- Custom Theme files -->
       <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="default/css/head&foot.css">
-	  <link rel="stylesheet" type="text/css" href="default/css/main.css">
-	  <link rel="stylesheet" type="text/css" href="default/css/animate.css">
+	   <link rel="stylesheet" type="text/css" href="default/css/about.css">
+	 
       <!-- font-awesome icons -->
       <link type="text/css" rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="all" />
       <!-- //Custom Theme files -->
@@ -54,14 +54,12 @@
       <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700" rel="stylesheet">
 	  <!-- //animate -->
-	<script src="/__/firebase/7.9.3/firebase-app.js"></script>
-	<script src="/__/firebase/7.9.3/firebase-analytics.js"></script>
-	<script src="/__/firebase/init.js"></script>
+	
   </head>
 <body>
   <!--NavBar-->
 	<nav class="navbar sticky-top navbar-expand-md">
-		<a class="navbar-brand" href="https://www.mssneksu.com.ng"><img src="./default/images/logo2.PNG" width="100px" height="30px" alt="mssn-logo-made-by-AK-Benzema-08148175501"/></a>
+		<a class="navbar-brand" href="#"><img src="./default/images/logo2.PNG" width="100px" height="30px" alt="mssn-logo-made-by-AK-Benzema-08148175501"/></a>
 		<button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#main-navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -88,8 +86,8 @@
 				</li>	
 				<li class="nav-item">
 					<a class="nav-link" href="https://www.mssneksu.com.ng/eksuma.html">Eksuma</a>
-				</li>    
-				<li class="nav-item">
+        </li>    
+        <li class="nav-item">
 					<a class="nav-link" href="https://www.mssneksu.com.ng/downloads.html">Downloads</a>
 				</li> 
 				<li class="nav-item">
@@ -108,130 +106,21 @@
 		</div>
     </nav>
  <!--NavBar-->
- <!--sliders-->
-	<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-		<div class="carousel-inner">
-		  <div class="carousel-item active">
-			<img class="d-block w-100" src="default/images/banner.jpg">
-		  </div>
-		  <div class="carousel-item">
-			<img class="d-block w-100" src="default/images/jar.jpg">
-		  </div>
-		  <div class="carousel-item">
-			<img class="d-block w-100" src="default/images/bar.jpg">
-		  </div>
-		</div>
-	  </div>
-<!--sliders ends-->
 
-<!--main-->
-<hr>
-<h2>LATEST NEWS</h2>
-<hr>
-<div class="container">
-<div class="row">
-<div class="col-lg-6 col-md-4 col-xs-12">
-	<div class="card wow fadeInRight">
-		<a class="img-card img-thumbnail" href="#">
-		<img src="default/images/nhicoms.jpg" />
-		</a>
-		<div class="card-content">
-			<h4 class="card-title">
-				<a href="#">MSSN EKSU TO START FRESHERS ORIENTATION
-				</a>
-			</h4>
-			<p class="desc">
-				Need to know much about the upcoming Mssn Eksu Freshers Orientation..
-			</p>
-		</div>
+<section>    
+<div class="container-fluid">
+        <h5 class="section-title h1">About US</h5>
 
-	</div>
+     <p>Love Uprigthness? So do wo, Here at <strong>MSSN_EKSU</strong>, we have a passion and reputation for building students who are known ass all round champs exelling  in their varous activities.</p>
+     <p>Our Society is driven by our vision and objectives to add value to certificate whilst upholding the most utmost spirit of brotherhood.</p>
+     <p>Our love for religion is superb, for value added education is null secondus</p>
+     <p>Be a member, own your future and build your hereafter.</p>
+     <h4>IN SHA ALLAH!!!!</h4>
+    </div>
 </div>
-<div class="col-lg-6 col-md-4 col-12">
-	<div class="card wow fadeInLeft">
-		<a class="img-card img-thumbnail" href="#">
-		<img src="default/images/nhicoms.jpg" />
-		</a>
-		<div class="card-content">
-			<h4 class="card-title">
-				<a href="#"> MSSN EKSU HOST NHICOMS 2020
-				</a>
-			</h4>
-			<p class="">
-				This is the first time whereby MSSN EKSU host the Nhicoms Program,here are the recorded session...
-			</p>
-		</div>
-		
-	</div>
-</div>
-<div class="col-lg-6 col-md-4 col-12">
-	<div class="card wow fadeInRight">
-		<a class="img-card img-thumbnail" href="#">
-		<img src="default/images/nhicoms.jpg" />
-		</a>
-		<div class="card-content">
-			<h4 class="card-title">
-				<a href="#"> WAYS TO INCREASE YOUR TAQWA
-				</a>
-			</h4>
-			<p class="desc">
-				Here are few guidlines to the improve your taqwa...
-			</p>
-		</div>
-		
-	</div>
-</div>
-<div class="col-lg-6 col-md-4 col-12">
-	<div class="card wow fadeInLeft">
-		<a class="img-card img-thumbnail" href="#">
-		<img src="default/images/nhicoms.jpg" />
-		</a>
-		<div class="card-content">
-			<h4 class="card-title">
-				<a href="#">WANT TO JOIN THE MSSN EKSU MODRASAT?
-				</a>
-			</h4>
-			<p class="desc">
-				You can increase your Islamic Knowledge by joining the mssn eksu modrasat..
-			</p>
-		</div>
-	</div>
-</div>
-<div class="col-lg-6 col-md-4 col-12">
-	<div class="card wow fadeInUp">
-		<a class="img-card img-thumbnail" href="#">
-		<img src="default/images/jar.jpg" />
-		</a>
-		<div class="card-content">
-			<h4 class="card-title">
-				<a href="#"> WELCOME TO EKSU MSSN OFFICIAL WEBSITE
-				</a>
-			</h4>
-			<p class="">
-				Are you a muslim student of Ekiti State University....
-			</p>
-		</div>
-	</div>
-</div>
-   <!-- <div class="col-lg-6 col-md-4">
-			<div class="card text-white bg-success">
-				<div class="card-header">
-					<h4><span class="center glyphicons glyphicons-book-open"></span>SPECIAL DAYS IN ISLAM</h4>
-				</div>
-				<div class="card-body">
-				<div align="center">
-				<iframe style="width: 240px; height: 460px; border: 1px solid #ddd;" frameBorder="0" scrolling="no" src="https://www.islamicfinder.org/specialislamicdays"> </iframe>
-			  </div>
-			 </div>
-			</div>
-	       </div> -->
-		</div>
-	  </div>
-	</div>
-</div>
-</div> 
-</div>
-<footer>
+</section>
+
+ <footer>
     <div class="page-footer">
       <div class="container">
       <div class="row">
@@ -253,10 +142,8 @@
       </div>
       <div class="footer-copyright text-center">Developed by <a href="http://saintmalik.me" title="">SaintMalik</a> and maintained by these <a href="/media-it-team">Media/IT Team</a></div>
     </footer>
-<script src="default/js/jquery-3.3.1.min.js"></script>
-<script src="bootstrap/js/bootstrap.min.js"></script>
-<script src="default/js/main.js"></script>
-<script src="default/js/wow.min.js"></script>
-<script> new WOW().init(); </script>
-</body>	
-</html>
+    <script src="default/js/jquery-3.3.1.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="default/js/main.js"></script>
+    </body>
+    </html>
