still testing with DO

--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
 					<a class="nav-link" href="https://www.mssneksu.com.ng/downloads.html">Downloads</a>
 				</li> 
 				<li class="nav-item">
-					<a class="nav-link" href="https://www.mssneksu.com.ng/blog.html">Our Blog</a>
+					<a class="nav-link" href="https://mssneksu-doh5g.ondigitalocean.app//blog.html">Our Blog</a>
 				</li>    
 				<li class="nav-item">
 						<a class="nav-link" href="https://www.mssneksu.com.ng/donate.html">Donate</a>
