Update and added new stuffs

--- a/public/404.html
+++ b/public/404.html
@@ -9,6 +9,7 @@
   <link itemprop="url" rel="canonical" href="https://saintmalik.me" />
   <title>My 404 page</title>
   <link rel="stylesheet" href="default/css/404.css">
+  <link rel="stylesheet" href="css/404.css">
 </head>
 
 <body>
