--- a/public/register.html
+++ b/public/register.html
@@ -19,13 +19,13 @@
 <link itemprop="url" rel="canonical" href="https://www.mssneksu.com.ng" />
 <meta itemprop="name" content="Register | MSSN EKSU CHAPTER">
 <meta itemprop="description" content="MSSN EKSU is an Islamic Organization on Ekiti State University Campus., The society caters for the Academic excellence, spiritual uplift, moral consciousness and welfare of all Muslim students on campus">
-<meta itemprop="image" content="default/images/logo/logo.png">
+<meta itemprop="image" content="default/images/logo.png">
 
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://www.mssneksu.com.ng" />
 <meta property="og:title" content="Register | MSSN EKSU CHAPTER" />
 <meta property="og:description" content="MSSN EKSU is an Islamic Organization on Ekiti State University Campus., The society caters for the Academic excellence, spiritual uplift, moral consciousness and welfare of all Muslim students on campus" />
-<meta property="og:image" content="default/images/logo/logo.png" />
+<meta property="og:image" content="default/images/logo.png" />
 <meta property="og:image:type" content="image/png" />
 <meta property="og:image:alt" content="MSSN EKSU" />
 
@@ -35,7 +35,7 @@
 <meta name="twitter:creator" content="@saintmalik_">
 <meta name="twitter:title" content="Register | MSSN EKSU CHAPTER">
 <meta name="twitter:description" content="MSSN EKSU is an Islamic Organization on Ekiti State University Campus., The society caters for the Academic excellence, spiritual uplift, moral consciousness and welfare of all Muslim students on campus">
-<meta name="twitter:image:src" content="./default/images/logo/logo.png">
+<meta name="twitter:image:src" content="./default/images/logo.png">
 <meta name="twitter:image:alt" content="MSSN EKSU">
 
 <link id="favicon" rel="icon" href="https://res.cloudinary.com/saintmalik/image/upload/v1584186187/mssn/logo.png" type="image/x-icon">
@@ -59,41 +59,38 @@
 <div class="collapse navbar-collapse" id="main-navigation">
 <ul class="navbar-nav">
 <li class="nav-item">
-<a class="nav-link" href="https://www.mssneksu.com.ng">Home</a>
+<a class="nav-link" href="/">Home</a>
 </li>
 <li class="nav-item dropdown">
 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 About
 </a>
 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-<a class="dropdown-item" href="https://www.mssneksu.com.ng/about.html">About Us</a>
-<a class="dropdown-item" href="https://www.mssneksu.com.ng/executives.html">The Excutives</a>
-<a class="dropdown-item" href="https://www.mssneksu.com.ng/blog/">Press Release</a>
+<a class="dropdown-item" href="/about">About Us</a>
+<a class="dropdown-item" href="/executives">The Excutives</a>
+<a class="dropdown-item" href="/blog/">Press Release</a>
 </div>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="https://www.mssneksu.com.ng/lectures.html">Lectures</a>
+<a class="nav-link" href="/lectures">Lectures</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="https://www.mssneksu.com.ng/events.html">Programmes</a>
+<a class="nav-link" href="/events">Programmes</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="https://www.mssneksu.com.ng/eksuma.html">Alumni</a>
+<a class="nav-link" href="/eksuma">Alumni</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="https://www.mssneksu.com.ng/downloads.html">Downloads</a>
+<a class="nav-link" href="/downloads">Downloads</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="https://www.mssneksu.com.ng/blog/">Our Blog</a>
+<a class="nav-link" href="/blog/">Our Blog</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="https://www.mssneksu.com.ng/donate.html">Donate</a>
+<a class="nav-link" href="/donate">Donate</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="https://www.mssneksu.com.ng/login.html">Login</a>
-</li>
-<li class="nav-item">
-<a class="boxer nav-link" href="https://www.mssneksu.com.ng/register.html">Register</a>
+<a class="boxer nav-link" href="/register">Register</a>
 </li>
 </ul>
 </div>
@@ -104,8 +101,10 @@ About
 <div class="contact-form-layouts">
 <h5 class="cont-form">MSSN EKSU REGISTRATION FORM</h5>
 <form id="createForm" class="register-wthree form-group">
+<div class="form-group">
 <label for="name">Firstname</label>
 <input class="form-control" type="text" placeholder="Salawu" id="firstname" name="firstname" required data-error="Please enter your name">
+</div>
 <div class="form-group">
 <label for="name">Middlename</label>
 <input class="form-control" type="text" placeholder="Abdulmalik" id="middlename" name="middlename" required data-error="Please enter your name">
@@ -159,16 +158,16 @@ About
 <input class="form-control" type="email" placeholder="example@gmail.com" id="email" name="email" required>
 <div class="help-block with-errors"></div>
 </div>
-<div class="form-group">
+<!-- <div class="form-group">
 <label for="email">Password</label>
 <input class="form-control" type="password" placeholder="*******" required data-val="true" data-val-length="The Password must be at least 8 and at max 100 characters long." data-val-length-max="100" data-val-length-min="8" data-val-required="The Password field is required." id="password" name="password" />
-</div>
+</div> -->
 <div class="form-group">
 <button type="submit" class="mt-4 btn btn-w3layouts btn-block btn-success text-white w-100 font-weight-bold text-uppercase">Create Account</button></div>
 </form>
 <br>
 <p class="lol">
-<a href="/login.html"> Already Signed Up? Login Here</a>
+<a href="/eksuma.html"> Are you a graduate? Join the Alumnis!</a>
 </p>
 </div>
 </div>
@@ -184,8 +183,8 @@ About
 </div>
 <div class="col-lg-4 col-md-4 col-sm-12 foot">
 <h6 class="text-uppercase font-weight-bold">Contact</h6>
-<i class="fa fa-map-marker"></i> <a href="/cdn-cgi/l/email-protection#315c42425f545a44000871565c50585d1f525e5c">Central Mosque,Ekiti State UNiversity</a><br />
-<i class="fa fa-envelope"></i> <a href="/cdn-cgi/l/email-protection#214c52524f444a54101861464c40484d0f424e4c"><span class="__cf_email__" data-cfemail="d2bfa1a1bcb7b9a7e3eb92b5bfb3bbbefcb1bdbf">[email&#160;protected]</span></a><br />
+<i class="fa fa-map-marker"></i> <a href="">Central Mosque,Ekiti State UNiversity</a><br />
+<i class="fa fa-envelope"></i> <a href="mailto:mssneku19@gmail.com"></a>mssneku19@gmail.com<br />
 <i class="fa fa-phone"></i> <a href="tel:+2348034388262">+2348034388262</a><br />
 <i class="fa fa-twitter"></i><a href="https://twitter.com/mssneksu"> @mssneksu</a><br />
 <i class="fa fa-whatsapp"></i><a href="tel:+2348034388262">+2348034388262</a>
@@ -195,10 +194,10 @@ About
 </div>
 <div class="footer-copyright text-center">Developed by <a href="http://saintmalik.me" title="">SaintMalik</a> and maintained by these <a href="/media-it-team">Media/IT Team</a></div>
 </footer>
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script defer src="https://www.gstatic.com/firebasejs/7.2.1/firebase-app.js" type="a682dd71d26f400c5d2ab880-text/javascript"></script>
-<script defer src="https://www.gstatic.com/firebasejs/7.2.1/firebase-database.js" type="a682dd71d26f400c5d2ab880-text/javascript"></script>
-<script defer src="default/js/jquery-3.4.1.min.js" type="a682dd71d26f400c5d2ab880-text/javascript"></script>
-<script defer src="default/js/bootstrap/bootstrap.min.js" type="a682dd71d26f400c5d2ab880-text/javascript"></script>
-<script defer src="default/js/reg.js" type="a682dd71d26f400c5d2ab880-text/javascript"></script>
-<script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="a682dd71d26f400c5d2ab880-|49" defer=""></script></body>
+<script defer src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+<script defer src="https://www.gstatic.com/firebasejs/8.6.1/firebase-database.js"></script>
+<script defer src="default/js/jquery-3.6.0.min.js"></script>
+<script defer src="default/js/bootstrap/bootstrap.min.js"></script>
+<script defer src="default/js/reg.js"></script>
+</body>
 </html>
