--- a/public/404.html
+++ b/public/404.html
@@ -1,38 +1,40 @@
-
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
-  <link itemprop="url" rel="canonical" href="https://saintmalik.me" />
-  <title>My 404 page</title>
-  <link rel="stylesheet" href="default/css/404.css">
-  <link rel="stylesheet" href="css/404.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no" />
+    <link itemprop="url" rel="canonical" href="https://www.mssneksu.com.ng" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <title>My 404 page</title>
+    <link rel="stylesheet" href="default/css/404.css" />
+    <link rel="stylesheet" href="css/404.css" />
 </head>
 
 <body>
-  <div class="code-area">
-  <span style="color: #777;font-style:italic;">
-    // 404 page not found.
-  </span>
-  <span>
-    <span style="color:#d65562;">
-      if
-    </span>
-	  (<span style="color:#4ca8ef;">!</span><span style="font-style: italic;color:#bdbdbd;">found</span>)
-    {
-  </span>
-  <span>
-    <span style="padding-left: 15px;color:#2796ec">
-       <i style="width: 10px;display:inline-block"></i>throw
-    </span>
-    <span>
-      (<span style="color: #a6a61f">"Hey! It seems you followed a dead url.Annoying yeah? Ikr. Click <a href="https://www.mssneksu.com.ng">Home</a> to go back."</span>);
-    </span>
-	  <span style="display:block">}</span>
-  </span>
-</div>
+    <div class="code-area">
+        <span style="color: #777; font-style: italic">
+        // 404 page not found.
+      </span>
+        <span>
+        <span style="color: #d65562"> if </span> (
+        <span style="color: #4ca8ef">!</span
+        ><span style="font-style: italic; color: #bdbdbd">found</span>) {
+        </span>
+        <span>
+        <span style="padding-left: 15px; color: #2796ec">
+          <i style="width: 10px; display: inline-block"></i>throw
+        </span>
+        <span>
+          (<span style="color: #a6a61f"
+            >"Hey! It seems you followed a dead url.Annoying yeah? Ikr. Click
+            <a href="https://www.mssneksu.com.ng">Home</a> to go back."</span
+          >);
+        </span>
+        <span style="display: block">}</span>
+        </span>
+    </div>
 </body>
+
 </html>
