--- a/public/executives.html
+++ b/public/executives.html
@@ -106,26 +106,26 @@
         <h1 class="h1">Mssn Eksu Executives</h1>
         <div class="card">
             <h5 itemprop="name" class="card-title">
-                <a href="executives-20-21">MSSN EKSU EXECUTIVES COUNCIL 2020/2021</a>
+                <a href="executives-19-20">MSSN EKSU EXECUTIVES COUNCIL 2019/2020</a>
             </h5>
         </div>
         <div class="card">
             <h5 itemprop="name" class="card-title">
-                <a href="executives-21-22.html">MSSN EKSU EXECUTIVES COUNCIL 2021/2022</a
+                <a href="executives-20-21">MSSN EKSU EXECUTIVES COUNCIL 2020/2021</a
           >
         </h5>
       </div>
       <div class="card">
         <h5 itemprop="name" class="card-title">
-          <a href="executives-22-23.html"
-            >MSSN EKSU EXECUTIVES COUNCIL 2022/2023</a
+          <a href="executives-21-22"
+            >MSSN EKSU EXECUTIVES COUNCIL 2021/2022</a
           >
         </h5>
       </div>
       <div class="card">
         <h5 itemprop="name" class="card-title">
-          <a href="executives-23-24.html">
-            MSSN EKSU EXECUTIVES COUNCIL 2023/2024</a
+          <a href="executives-22-23">
+            MSSN EKSU EXECUTIVES COUNCIL 2022/2023</a
           >
         </h5>
       </div>
