--- a/public/register.html
+++ b/public/register.html
@@ -170,7 +170,7 @@ About
 </form>
 <br>
 <p class="lol ">
-<a href="/eksuma.html "> Are you a graduate? Join the Alumnis!</a>
+<a href="/eksuma "> Are you a graduate? Join the Alumnis!</a>
 </p>
 </div>
 </div>
