--- a/public/executives-22-23.html
+++ b/public/executives-22-23.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <meta name="robots" content="index, follow">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <meta name="robots" content="index, follow" />
     <meta name="googlebot" content="index, follow" />
     <meta name="google" content="translate" />
 
@@ -14,16 +14,16 @@
 
     <!-- SEO Meta Tag -->
     <meta name="author" content="Abdulmalik" />
-    <meta name="title" content="Executives | MSSN EKSU CHAPTER">
+    <meta name="title" content="Executives | MSSN EKSU CHAPTER" />
     <meta name="keywords" content="" />
-    <meta name="description" content="MSSN EKSU is an Islamic Organization on Ekiti State University Campus., The society caters for the Academic excellence, spiritual uplift, moral consciousness and welfare of all Muslim students on campus">
+    <meta name="description" content="MSSN EKSU is an Islamic Organization on Ekiti State University Campus., The society caters for the Academic excellence, spiritual uplift, moral consciousness and welfare of all Muslim students on campus" />
 
     <!-- Google -->
     <meta name="google-site-verification" content="" />
     <link itemprop="url" rel="canonical" href="https://www.mssneksu.com.ng" />
-    <meta itemprop="name" content="MSSN EKSU">
-    <meta itemprop="description" content="MSSN EKSU is an Islamic Organization on Ekiti State University Campus., The society caters for the Academic excellence, spiritual uplift, moral consciousness and welfare of all Muslim students on campus">
-    <meta itemprop="image" content="default/images/logo.png">
+    <meta itemprop="name" content="MSSN EKSU" />
+    <meta itemprop="description" content="MSSN EKSU is an Islamic Organization on Ekiti State University Campus., The society caters for the Academic excellence, spiritual uplift, moral consciousness and welfare of all Muslim students on campus" />
+    <meta itemprop="image" content="default/images/logo.png" />
 
     <!-- Facebook -->
     <meta property="og:type" content="website" />
@@ -35,24 +35,24 @@
     <meta property="og:image:alt" content="MSSN EKSU" />
 
     <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://www.mssneksu.com.ng">
-    <meta name="twitter:site" content="@mssneksu">
-    <meta name="twitter:creator" content="@saintmalik_">
-    <meta name="twitter:title" content="Executives | MSSN EKSU CHAPTER">
-    <meta name="twitter:description" content="MSSN EKSU is an Islamic Organization on Ekiti State University Campus., The society caters for the Academic excellence, spiritual uplift, moral consciousness and welfare of all Muslim students on campus">
-    <meta name="twitter:image:src" content="./default/images/logo.png">
-    <meta name="twitter:image:alt" content="MSSN EKSU">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.mssneksu.com.ng" />
+    <meta name="twitter:site" content="@mssneksu" />
+    <meta name="twitter:creator" content="@saintmalik_" />
+    <meta name="twitter:title" content="Executives | MSSN EKSU CHAPTER" />
+    <meta name="twitter:description" content="MSSN EKSU is an Islamic Organization on Ekiti State University Campus., The society caters for the Academic excellence, spiritual uplift, moral consciousness and welfare of all Muslim students on campus" />
+    <meta name="twitter:image:src" content="./default/images/logo.png" />
+    <meta name="twitter:image:alt" content="MSSN EKSU" />
 
     <!-- Custom Theme files -->
-    <link rel="stylesheet" href="default/css/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="default/css/head&foot.css">
-    <link rel="stylesheet" type="text/css" href="default/css/excos.css">
+    <link rel="stylesheet" href="default/css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="default/css/head&foot.css" />
+    <link rel="stylesheet" type="text/css" href="default/css/excos.css" />
     <!-- font-awesome icons -->
     <link type="text/css" rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="all" />
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700" rel="stylesheet" />
 </head>
 
 <body>
@@ -60,8 +60,8 @@
     <nav class="navbar sticky-top navbar-expand-md">
         <a class="navbar-brand" href="https://www.mssneksu.com.ng"><img src="./default/images/logo2.PNG" width="100px" height="30px" alt="mssn-logo-made-by-AK-Benzema-08148175501" /></a>
         <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#main-navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
+        <span class="navbar-toggler-icon"></span>
+      </button>
         <div class="collapse navbar-collapse" id="main-navigation">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -69,8 +69,8 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                About
-          </a>
+              About
+            </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="/about">About Us</a>
                         <a class="dropdown-item" href="/executives">The Excutives</a>
@@ -108,8 +108,8 @@
             <h2>MssnEksu Executives Council 2022/2023</h2>
         </div>
     </div>
-    <br>
-    <br>
+    <br />
+    <br />
     <!-- <div class="container">
             <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" rel="stylesheet" />
                 <table border="0" cellpadding="0" cellspacing="0" class="table table-striped table-responsive" width="1124">
@@ -247,8 +247,8 @@
                 </tbody>
                 </table> -->
     <b>NO TRANSITIONING YET</b>
-    <br>
-    <br>
+    <br />
+    <br />
     <!-- <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" rel="stylesheet" />
                 <table border="0" cellpadding="0" cellspacing="0" class="table table-striped table-responsive" width="1124">
                 <tbody>
@@ -449,25 +449,34 @@
                 <div class="row">
                     <div class="col-lg-8 col-md-8 col-sm-12">
                         <h3 class="text-uppercase font-weight-bold">MSSNEKSU</h3>
-                        <p>The EKSU chapter of MSSN is the only Islamic Organization on the Ekiti State University Campus., The society caters for the Academic excellence, spiritual uplift, moral consciousness and welfare of all Muslim students on campus...</p>
-
+                        <p>
+                            The EKSU chapter of MSSN is the only Islamic Organization on the Ekiti State University Campus., The society caters for the Academic excellence, spiritual uplift, moral consciousness and welfare of all Muslim students on campus...
+                        </p>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12 foot">
                         <h6 class="text-uppercase font-weight-bold">Contact</h6>
-                        <i class="fa fa-map-marker"></i> <a href="https://goo.gl/maps/BrgdgFTZoe9pBHPL9">Central Mosque,Ekiti State UNiversity</a><br/>
-                        <i class="fa fa-envelope"></i> <a href="mailto:mssneku19@gmail.com">mssneku19@gmail.com</a><br/>
-                        <i class="fa fa-phone"></i> <a href="tel:+2348034388262">+2348034388262</a><br/>
-                        <i class="fa fa-twitter"></i><a href="http://twitter.com/mssneksu"> @mssneksu</a><br/>
-                        <i class="fa fa-whatsapp"></i><a href="tel:+2348034388262">+2348034388262</a>
-                    </div>
-                </div>
+                        <i class="fa fa-map-marker"></i>
+                        <a href="https://goo.gl/maps/BrgdgFTZoe9pBHPL9">Central Mosque,Ekiti State UNiversity</a
+              ><br />
+              <i class="fa fa-envelope"></i>
+              <a href="mailto:mssneku19@gmail.com">mssneku19@gmail.com</a><br />
+                        <i class="fa fa-phone"></i>
+                        <a href="tel:+2348034388262">+2348034388262</a><br />
+                        <i class="fa fa-twitter"></i
+              ><a href="http://twitter.com/mssneksu"> @mssneksu</a><br />
+              <i class="fa fa-whatsapp"></i
+              ><a href="tel:+2348034388262">+2348034388262</a>
             </div>
+          </div>
         </div>
-        <div class="footer-copyright text-center">Developed by <a href="http://saintmalik.me" title="">SaintMalik</a> and maintained by these <a href="/media-it-team">Media/IT Team</a></div>
+      </div>
+      <div class="footer-copyright text-center">
+        Developed by <a href="http://saintmalik.me" title="">SaintMalik</a> and
+        maintained by these <a href="/media-it-team">Media/IT Team</a>
+      </div>
     </footer>
     <script src="default/js/jquery-3.6.0.min.js"></script>
     <script src="default/js/bootstrap/bootstrap.min.js"></script>
     <script src="default/js/main.js"></script>
-</body>
-
+  </body>
 </html>
