--- a/public/eksuma.html
+++ b/public/eksuma.html
@@ -123,7 +123,7 @@
         <h5 class="cont-form"> Alumni Registeration Form</h5>
         <form id="registerForm" class="register-wthree">
             <label for="name">Your Name</label>
-            <input class="form-control" type="text" placeholder="Abdulmalik Adewale" id="name" name="name" required data-error="Please enter your name">
+            <input class="form-control" type="text" placeholder="Firstname Lastname" id="name" name="name" required data-error="Please enter your name">
             <div class="form-group">
                 <label for="department">Department</label>
                 <input class="form-control" type="text" placeholder="Computer Science Edu" id="department" name="department" required data-error="Please enter your department">
