--- a/public/register.html
+++ b/public/register.html
@@ -105,15 +105,15 @@ About
         <form id="createForm" class="register-wthree form-group">
             <div class="form-group">
                 <label for="name">Firstname</label>
-                <input class="form-control" type="text" placeholder="Salawu" id="firstname" name="firstname" required data-error="Please enter your name">
+                <input class="form-control" type="text" placeholder="Firstname" id="firstname" name="firstname" required data-error="Please enter your name">
             </div>
             <div class="form-group">
                 <label for="name">Middlename</label>
-                <input class="form-control" type="text" placeholder="Abdulmalik" id="middlename" name="middlename" required data-error="Please enter your name">
+                <input class="form-control" type="text" placeholder="Middlename" id="middlename" name="middlename" required data-error="Please enter your name">
             </div>
             <div class="form-group">
                 <label for="name">Lastname</label>
-                <input class="form-control" type="text" placeholder="Adewale" id="lastname" name="lastname" required data-error="Please enter your name">
+                <input class="form-control" type="text" placeholder="Lastname" id="lastname" name="lastname" required data-error="Please enter your name">
             </div>
             <div class="form-group">
                 <label for="name">Date Of Birth</label>
