redirects to blog page

--- a/public/executives-20-21.html
+++ b/public/executives-20-21.html
@@ -583,13 +583,13 @@
                         <p>The EKSU chapter of MSSN is the only Islamic Organization on the Ekiti State University Campus., The society caters for the Academic excellence, spiritual uplift, moral consciousness and welfare of all Muslim students on campus...</p>
 
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12 foot">
+                    <div class="col-lg-4 col-md-4 col-sm-12 foot bugride">
                         <h6 class="text-uppercase font-weight-bold">Contact</h6>
-                        <i class="fa fa-map-marker"></i> <a href="https://goo.gl/maps/BrgdgFTZoe9pBHPL9">Central Mosque,Ekiti State UNiversity</a><br/>
-                        <i class="fa fa-envelope"></i> <a href="mailto:mssneku19@gmail.com">mssneku19@gmail.com</a><br/>
-                        <i class="fa fa-phone"></i> <a href="tel:+2348034388262">+2348034388262</a><br/>
-                        <i class="fa fa-twitter"></i><a href="http://twitter.com/mssneksu"> @mssneksu</a><br/>
-                        <i class="fa fa-whatsapp"></i><a href="tel:+2348034388262">+2348034388262</a>
+                        <i class="fa fa-map-marker"><a href="https://goo.gl/maps/BrgdgFTZoe9pBHPL9"> Central Mosque,Ekiti State UNiversity</a></i><br/>
+                        <i class="fa fa-envelope"> <a href="mailto:mssneku19@gmail.com">mssneku19@gmail.com</a></i><br/>
+                        <i class="fa fa-phone"> <a href="tel:+2348034388262">+2348034388262</a></i><br/>
+                        <i class="fa fa-twitter"><a href="http://twitter.com/mssneksu"> @mssneksu</a></i><br/>
+                        <i class="fa fa-whatsapp"><a href="tel:+2348034388262">+2348034388262</a></i>
                     </div>
                 </div>
             </div>
